# recursio

./: Cargo.toml  README.md  create_update_function.sql  create_user_table.sql  package-lock.json  package.json
src/: app.css  database.rs  llm.rs  main.rs  serper.rs  types.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: intelligence.rs  lib.rs  main.rs  state.rs
src-tauri/src/agents/: mod.rs  orchestrator.rs  page_agent.rs  search_agent.rs
src-tauri/src/models/: models.rs
src-tauri/src/storage/: database.rs
src/routes/: +layout.svelte  +page.svelte  chat.svelte.ts  chat_panel.svelte  types.ts
src/routes/setup/: +page.svelte
