[package]
name = "recursio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-macros = "0.5.1"
chrono = { version = "0.4.44", features = ["serde"] }
bytes = "1.11.1"
dotenv = "0.15.0"
futures = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
firebase-auth =  { version = "0.5.1", features = ["axum"]}
tower_governor = "0.8.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }

