[package]
name = "recursio"
version = "0.1.0"
description = "private intelligence with internet access"
authors = ["recursio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deep_research_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = "0.9.1"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
anyhow = "1.0.102"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4.44"
rusqlite =  { version = "0.38.0", features = ["bundled"] }
tauri-plugin-shell = "2"
sha2 = "0.10.9"
tauri-plugin-log = "2"
